--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "http-errors": "~1.6.3",
     "luxon": "^3.4.3",
     "mongoose": "^7.5.2",
